--- a/Templates/Console.html
+++ b/Templates/Console.html
@@ -22,7 +22,7 @@
         <div class="col-lg-12">
           <div class="row console">
             <iframe
-src="http://localhost:9999/?cid={{container}}&cmd={{shell}}"
+src="http://localhost:9999/webconsole/?cid={{container}}&cmd={{shell}}"
 style="height: 460px; border: none"
 ></iframe
           
